--- a/Groceries-App-Backend/pom.xml
+++ b/Groceries-App-Backend/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>secretsmanager</artifactId>
             <version>2.31.26</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
