--- a/Groceries-App-Backend/pom.xml
+++ b/Groceries-App-Backend/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.awspring.cloud</groupId>
+            <artifactId>spring-cloud-aws-starter</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
