--- a/Groceries-App-Backend/src/main/resources/application.properties
+++ b/Groceries-App-Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Groceries-App-Backend
-spring.datasource.url=jdbc:mysql://localhost:3306/groceries_app
-spring.datasource.username=root
-spring.datasource.password=Sql@12345
+spring.datasource.url=jdbc:mysql://${prod/GrApp/DB:host}:${prod/GrApp/DB:port}/${prod/GrApp/DB:dbname}
+spring.datasource.username=${prod/GrApp/DB:username}
+spring.datasource.password=${prod/GrApp/DB:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
