--- a/Groceries-App-Backend/src/main/resources/application.properties
+++ b/Groceries-App-Backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Groceries-App-Backend
-spring.datasource.url=jdbc:mysql://${prod/GrApp/DB:host}:${prod/GrApp/DB:port}/${prod/GrApp/DB:dbname}
-spring.datasource.username=${prod/GrApp/DB:username}
-spring.datasource.password=${prod/GrApp/DB:password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.datasource.url=disabled
+spring.datasource.username=disabled
+spring.datasource.password=disabled
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
