--- a/Groceries-App-Backend/src/main/resources/application.properties
+++ b/Groceries-App-Backend/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.password=disabled
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 server.error.whitelabel.enabled=false
