--- a/Shopping-List-App/src/main/resources/application.properties
+++ b/Shopping-List-App/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Groceries-App-Backend
+spring.application.name=Shopping-List-App
 
 spring.datasource.url=disabled
 spring.datasource.username=disabled
