Update Hibernate `ddl-auto` config from `update` to `none` in application properties

--- a/Shopping-List-App/src/main/resources/application.properties
+++ b/Shopping-List-App/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=disabled
 spring.datasource.password=disabled
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 
 server.error.whitelabel.enabled=false
