--- a/Shopping-List-App/pom.xml
+++ b/Shopping-List-App/pom.xml
@@ -8,7 +8,7 @@
         <version>3.5.3</version>
         <relativePath/>
     </parent>
-    <groupId>com.ravinduw.apps.groceries</groupId>
+    <groupId>com.ravinduw.apps.shoppinglistapp</groupId>
     <artifactId>Shopping-List-App</artifactId>
     <version>1.1.0</version>
     <name>Shopping-List-App</name>
